<resources>
    <string name="app_name">Notification Scheduler</string>
    <string name="wi_fi">WI_FI</string>
    <string name="any">ANY</string>
    <string name="none">NONE</string>
    <string name="schedule_job">Schedule Job</string>
    <string name="cancel_job">Cancel Job</string>
    <string name="choose_the_network_type">Choose the Network Type:</string>
    <string name="requires">Requires:</string>
    <string name="device_idle">Device Idle</string>
    <string name="override_deadline">Override Deadline:</string>
    <string name="not_set">not set!</string>
    <string name="device_charging">Device Charging</string>
</resources>
