<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/margin_16"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_the_network_type"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/network_r_g"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:tag="job"
        android:layout_margin="@dimen/margin_4"
        android:orientation="horizontal"
        android:checkedButton="@id/none_r_b"
        >

        <RadioButton
            android:id="@+id/none_r_b"
            android:tag="@string/none"
            android:layout_weight="1"
            android:text="@string/none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/any_r_b"
            android:layout_weight="1"
            android:tag="@string/any"
            android:text="@string/any"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/wifi_r_b"
            android:tag="@string/wi_fi"
            android:text="@string/wi_fi"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RadioGroup>

    <Button
        android:id="@+id/schedule_button"
        android:text="@string/schedule_job"
        android:layout_width="150dp"
        android:onClick="scheduleJob"
        style="@style/button_style" />

    <Button
        android:id="@+id/cancel_button"
        style="@style/button_style"
        android:layout_width="150dp"
        android:onClick="cancelJob"
        android:text="@string/cancel_job"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requires"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="@dimen/margin_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <Switch
        android:id="@+id/idle_switch"
        android:text="@string/device_idle"
        android:layout_weight="1"
        android:shadowColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
        <Switch
            android:id="@+id/charging_switch"
            android:text="@string/device_charging"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="@dimen/margin_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/override_deadline"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/set_t_v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/not_set"
            android:textStyle="italic"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </LinearLayout>

    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_margin="@dimen/margin_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>